--- a/article/art_edit.html
+++ b/article/art_edit.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-    <link rel="stylesheet" href="/assets/css/article/art_pub.css">
+    <link rel="stylesheet" href="/assets/css/article/art_edit.css">
     <link rel="stylesheet" href="/assets/lib/cropper/cropper.css">
 </head>
 
@@ -15,7 +15,7 @@
     <div class="layui-card">
         <div class="layui-card-header">写文章</div>
         <div class="layui-card-body">
-            <form class="layui-form" id="form-pub">
+            <form class="layui-form" lay-filter="form-edit" id="form-edit">
                 <div class="layui-form-item">
                     <label class="layui-form-label">文章标题</label>
                     <div class="layui-input-block">
@@ -90,7 +90,7 @@
     <script src="/assets/lib/cropper/Cropper.js"></script>
     <script src="/assets/lib/cropper/jquery-cropper.js"></script>
     <script src="/assets/js/baseAPI.js"></script>
-    <script src="/assets/js/article/art_pub.js"></script>
+    <script src="/assets/js/article/art_edit.js"></script>
 </body>
 
 </html>
