--- a/article/art_list.html
+++ b/article/art_list.html
@@ -70,7 +70,7 @@
             <td>{{item.pub_date | dataFormat}}</td>
             <td>{{item.state}}</td>
             <td>
-                <button data-id="{{item.Id}}"  type="button" class="btn-edit layui-btn  layui-btn-xs">编辑</button>
+                <a href="/article/art_edit.html?id={{item.Id}}" class="btn-edit layui-btn  layui-btn-xs">编辑</a>
             <button data-id="{{item.Id}}" type="button" class="layui-btn layui-btn-danger layui-btn-xs btn-delete">删除</button>
             </td>
         </tr>
